[gd_scene load_steps=4 format=2]

[ext_resource path="res://shared/game/Game.tscn" type="PackedScene" id=1]
[ext_resource path="res://server/game/ServerGame.gd" type="Script" id=2]
[ext_resource path="res://server/game/creator/Creator.tscn" type="PackedScene" id=3]

[node name="Game" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="Creator" parent="." index="1" instance=ExtResource( 3 )]
[connection signal="celestium_found" from="Creator" to="." method="_on_Creator_celestium_found"]
[connection signal="generation_ended" from="Creator" to="." method="_on_Creator_generation_ended"]
[connection signal="grass_found" from="Creator" to="." method="_on_Creator_grass_found"]
[connection signal="map_size_declared" from="Creator" to="." method="_on_Creator_map_size_declared"]
[connection signal="marsh_found" from="Creator" to="." method="_on_Creator_marsh_found"]
[connection signal="mountains_found" from="Creator" to="." method="_on_Creator_mountains_found"]
[connection signal="scraps_found" from="Creator" to="." method="_on_Creator_scraps_found"]
[connection signal="starting_position_found" from="Creator" to="." method="_on_Creator_starting_position_found"]

[editable path="Map"]
